--- a/MyDYZB/Base.lproj/Live.storyboard
+++ b/MyDYZB/Base.lproj/Live.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Live View Controller-->
         <scene sceneID="cF3-82-y8u">
             <objects>
-                <viewController id="GHU-7s-FEC" sceneMemberID="viewController">
+                <viewController id="GHU-7s-FEC" customClass="LiveViewController" customModule="MyDYZB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KH7-33-Gh3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
