--- a/MyDYZB/Base.lproj/Profile.storyboard
+++ b/MyDYZB/Base.lproj/Profile.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Profile View Controller-->
         <scene sceneID="TBH-eH-dU5">
             <objects>
-                <viewController id="EfF-bw-mRp" sceneMemberID="viewController">
+                <viewController id="EfF-bw-mRp" customClass="ProfileViewController" customModule="MyDYZB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9Fn-pz-36O">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
