--- a/MyDYZB/Classes/Home/View/CollectionGameCell.xib
+++ b/MyDYZB/Classes/Home/View/CollectionGameCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionGameCell" customModule="MyDYZB" customModuleProvider="target">
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionGameCell" customModule="MyDYZB" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -18,18 +18,16 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="英雄联盟" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ppg-rK-3te">
-                        <rect key="frame" x="15" y="65" width="50" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="KhG-e2-DpG"/>
-                        </constraints>
+                        <rect key="frame" x="15" y="64.5" width="50" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" systemColor="systemGray2Color"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ejA-Fq-wjH">
-                        <rect key="frame" x="17.5" y="15" width="45" height="45"/>
+                        <rect key="frame" x="17.5" y="14.5" width="45" height="45"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="ejA-Fq-wjH" secondAttribute="height" multiplier="1:1" id="2Jz-Vo-C0H"/>
+                            <constraint firstAttribute="height" constant="45" id="dhF-Dg-T3M"/>
+                            <constraint firstAttribute="width" constant="45" id="zVl-Cf-ig7"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -38,26 +36,38 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
+                    <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="et1-QD-oSG">
+                        <rect key="frame" x="0.0" y="90" width="80" height="1"/>
+                        <color key="backgroundColor" systemColor="systemGrayColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="g3C-GR-e9r"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="ejA-Fq-wjH" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="7Dy-5Q-QUN"/>
-                <constraint firstItem="ppg-rK-3te" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="8YK-0q-4W8"/>
-                <constraint firstAttribute="bottom" secondItem="ppg-rK-3te" secondAttribute="bottom" constant="10" id="ApG-Zm-9Je"/>
-                <constraint firstItem="ejA-Fq-wjH" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Z0i-ra-Hnc"/>
-                <constraint firstItem="ppg-rK-3te" firstAttribute="top" secondItem="ejA-Fq-wjH" secondAttribute="bottom" constant="5" id="fdc-6D-1Xl"/>
+                <constraint firstAttribute="trailing" secondItem="et1-QD-oSG" secondAttribute="trailing" id="JlO-am-SqE"/>
+                <constraint firstItem="ppg-rK-3te" firstAttribute="centerX" secondItem="ejA-Fq-wjH" secondAttribute="centerX" id="aGL-et-4iZ"/>
+                <constraint firstItem="ejA-Fq-wjH" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="-8" id="hPU-nL-Nkd"/>
+                <constraint firstAttribute="bottom" secondItem="et1-QD-oSG" secondAttribute="bottom" constant="-1" id="ksL-vb-kZ2"/>
+                <constraint firstItem="ejA-Fq-wjH" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="uoy-pe-rk3"/>
+                <constraint firstItem="et1-QD-oSG" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="vX2-2O-mA6"/>
+                <constraint firstItem="ppg-rK-3te" firstAttribute="top" secondItem="ejA-Fq-wjH" secondAttribute="bottom" constant="5" id="xe6-G0-nGm"/>
             </constraints>
             <connections>
                 <outlet property="iconImageView" destination="ejA-Fq-wjH" id="s1s-gW-che"/>
                 <outlet property="titleLable" destination="ppg-rK-3te" id="0Wk-NM-fZv"/>
             </connections>
-            <point key="canvasLocation" x="-65" y="48"/>
+            <point key="canvasLocation" x="-330.43478260869568" y="-12.053571428571429"/>
         </collectionViewCell>
     </objects>
     <resources>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
