--- a/MyDYZB/Base.lproj/Home.storyboard
+++ b/MyDYZB/Base.lproj/Home.storyboard
@@ -27,7 +27,7 @@
         <!--首页-->
         <scene sceneID="Xv6-uD-J1v">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="W3l-nv-Oxh" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="W3l-nv-Oxh" customClass="CustomNavController" customModule="MyDYZB" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="首页" image="btn_home_normal" selectedImage="btn_home_selected" id="vDp-L7-CbE"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YcR-Jc-ugF">
