--- a/MyDYZB/Classes/Home/View/AmuseMenuView.xib
+++ b/MyDYZB/Classes/Home/View/AmuseMenuView.xib
@@ -21,15 +21,19 @@
                     <color key="pageIndicatorTintColor" systemColor="systemGray2Color"/>
                     <color key="currentPageIndicatorTintColor" systemColor="systemOrangeColor"/>
                 </pageControl>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="IO3-U9-A7s">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="IO3-U9-A7s">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="172"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="q6s-ed-nrA">
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="q6s-ed-nrA">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="iN0-l3-epB" id="Trc-bO-qGo"/>
+                        <outlet property="delegate" destination="iN0-l3-epB" id="QlD-qF-j2p"/>
+                    </connections>
                 </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -43,7 +47,11 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="IO3-U9-A7s" secondAttribute="trailing" id="zOz-pQ-zuc"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="17" y="-4"/>
+            <connections>
+                <outlet property="collectionView" destination="IO3-U9-A7s" id="7Og-wy-PVd"/>
+                <outlet property="pageControl" destination="pLg-zL-Qti" id="MKX-LA-x9H"/>
+            </connections>
+            <point key="canvasLocation" x="-338" y="-5"/>
         </view>
     </objects>
     <resources>
